removed utoipa and openapi spec from code
