# openapi.yaml
@@ -108,6 +108,28 @@ paths:
                   type: integer
                   minimum: 1
                   maximum: 200
+      responses:
+        "500":
+          description: Internal server error
+        "200":
+          description: Messages fetched successfully
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  required:
+                    - content
+                    - sentAt
+                  properties:
+                    content:
+                      type: string
+                      format: byte
+                    sentAt:
+                      type: string
+                      format: date-time
+
 
   /api/openapi.yaml:
     get:
